// 추상클래스 extends
abstract class Human {
  void speak();
}

// 인터페이스, 프로토콜 implements
abstract interface class Human2 {}

class Man implements Human {
  @override
  void speak() {
    // TODO: implement speak
  }
}
